--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "styled-components": "^6.1.1",
     "swr": "^2.2.4"
   },
