--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "next": "13.5.4",
+    "next-translate": "^2.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "next-translate-plugin": "^2.6.2",
     "sass": "^1.69.3",
     "typescript": "^5"
   }
