--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "next": "13.5.4",
-    "next-translate": "^2.6.2",
+    "next-intl": "^3.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
