--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
     "swr": "^2.2.4"
   },
